--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,6 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
-    "tailwind-merge": "^2.5.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
@@ -42,6 +41,8 @@
     ]
   },
   "devDependencies": {
+    "react-icons": "^5.2.1",
+    "tailwind-merge": "^2.5.0",
     "tailwindcss": "^3.4.9"
   }
 }
